--- a/_posts/2015-04-26-jekyll.md
+++ b/_posts/2015-04-26-jekyll.md
@@ -1,7 +1,7 @@
 ---
 layout: post
-title:  "jekyllでブログを作る"
-date:   2015-04-26
-categories: jekyll 
+title:  "初めてのWordpress組み込み"
+date:   2015-06-10
+categories: WordPress 
 ---
 
